# contador-procesos

./: README.md  main.py  pyproject.toml  requirements.txt
application/: use_cases.py
domain/: constants.py  pagination.py
infrastructure/: pdf_generator.py
ui/: streamlit_app.py
